fix menu footer overlap on hover

--- a/www/profiles/drupalcampfr/themes/bzh_theme/assets/css/theme/overrides.css
+++ b/www/profiles/drupalcampfr/themes/bzh_theme/assets/css/theme/overrides.css
@@ -151,3 +151,11 @@
 .layout-region-checkout-footer {
   margin-top: 20px;
 }
+
+/**********************************
+**** Footer *******
+**********************************/
+.footer-bottom ul li {
+  display: inline-block;
+  margin-top: 20px;
+}
